--- a/interest.html
+++ b/interest.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <style>
         body {
-            background: url("img/musicimg.jpg");
+            background: url("musicimg.jpg");
             color:white;
         }
         .right {
